--- a/index.html
+++ b/index.html
@@ -212,15 +212,15 @@
         import { getAuth, signInWithEmailAndPassword, createUserWithEmailAndPassword, signOut, onAuthStateChanged } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js';
         import { getFirestore, collection, addDoc, getDocs, query, where, orderBy } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js';
 
-const firebaseConfig = {
-  apiKey: "AIzaSyDPMEbNHpOmVoTWBtVd8sjCw04NdaHZiWU",
-  authDomain: "tradieiq-ff7c7.firebaseapp.com",
-  projectId: "tradieiq-ff7c7",
-  storageBucket: "tradieiq-ff7c7.firebasestorage.app",
-  messagingSenderId: "1032911231447",
-  appId: "1:1032911231447:web:3ec2652be817c1c28cd392",
-  measurementId: "G-GR2GLP5FKG"
-};
+        // Firebase config
+        const firebaseConfig = {
+            apiKey: "AIzaSyDPMEbNHpOnVoTMBt-Vd8sjCw04NdqHZiMU",
+            authDomain: "tradieiq-8d4a5.firebaseapp.com",
+            projectId: "tradieiq-8d4a5",
+            storageBucket: "tradieiq-8d4a5.appspot.com",
+            messagingSenderId: "123456789012",
+            appId: "1:123456789012:web:abc123def456"
+        };
 
         // Initialize Firebase
         const app = initializeApp(firebaseConfig);
